// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> main page Should render component 1`] = `
<Fragment>
  <Loader
    className="mainLoader"
  />
  <Layout
    className="layout_menu"
  >
    <MenuView
      activeTabEUID="MainModule"
      cbGoMain={[Function]}
      cbMenuHandler={[Function]}
      cbOnCollapse={[Function]}
      collapsed={false}
      items={null}
      key="menu"
    />
    <Layout
      key="main"
    >
      <Connect(HeaderView)
        actionTabs={
          Array [
            Object {
              "DATAKEY": "MainModule",
              "EUID": "MainModule",
              "PARENT_CODE": "MainModule",
              "VALUE": "MainModule",
            },
          ]
        }
        activeTabEUID="MainModule"
        cbMenuTabHandler={[Function]}
        dashboardStrem={
          EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
            "_maxListeners": undefined,
          }
        }
        goCabinet={[Function]}
        key="header"
        logout={[Function]}
      />
      <ContentView
        actionTabs={
          Array [
            "MainModule",
          ]
        }
        dashboardStrem={
          EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
            "_maxListeners": undefined,
          }
        }
        key="contentView"
        onErrorRequstAction={[Function]}
        onHideLoader={[Function]}
        onShowLoader={[Function]}
        path="MainModule"
        router={
          Object {
            "actionTabs": Array [
              "MainModule",
            ],
            "currentActionTab": "MainModule",
            "routeData": Object {
              "MainModule": Object {
                "name": "MainModule",
              },
            },
            "routeDataActive": null,
          }
        }
        setCurrentTab={[Function]}
        shouldUpdate={false}
        statusApp="online"
        udata={Object {}}
        updateLoader={[Function]}
      />
      <Modal
        className="guideModal"
        confirmLoading={false}
        maskTransitionName="fade"
        okText="Закрыть"
        okType="primary"
        onOk={[Function]}
        title="Добро пожаловать в систему."
        transitionName="zoom"
        visible={false}
        width={520}
      >
        <p>
          Спасибо что выбрали 
          нашу систему!
        </p>
      </Modal>
    </Layout>
  </Layout>
</Fragment>
`;

exports[`<Dashboard /> main page Should render component 2`] = `
<Fragment>
  <Layout
    className="layout_menu"
  >
    <MenuView
      activeTabEUID="MainModule"
      cbGoMain={[Function]}
      cbMenuHandler={[Function]}
      cbOnCollapse={[Function]}
      collapsed={false}
      items={null}
      key="menu"
    />
    <Layout
      key="main"
    >
      <Connect(HeaderView)
        actionTabs={
          Array [
            Object {
              "DATAKEY": "MainModule",
              "EUID": "MainModule",
              "PARENT_CODE": "MainModule",
              "VALUE": "MainModule",
            },
          ]
        }
        activeTabEUID="MainModule"
        cbMenuTabHandler={[Function]}
        dashboardStrem={
          EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
            "_maxListeners": undefined,
          }
        }
        goCabinet={[Function]}
        key="header"
        logout={[Function]}
      />
      <ContentView
        actionTabs={
          Array [
            "MainModule",
          ]
        }
        dashboardStrem={
          EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
            "_maxListeners": undefined,
          }
        }
        key="contentView"
        onErrorRequstAction={[Function]}
        onHideLoader={[Function]}
        onShowLoader={[Function]}
        path="MainModule"
        router={
          Object {
            "actionTabs": Array [
              "MainModule",
            ],
            "currentActionTab": "MainModule",
            "routeData": Object {
              "MainModule": Object {
                "name": "MainModule",
              },
            },
            "routeDataActive": null,
          }
        }
        setCurrentTab={[Function]}
        shouldUpdate={false}
        statusApp="online"
        udata={Object {}}
        updateLoader={[Function]}
      />
      <Modal
        className="guideModal"
        confirmLoading={false}
        maskTransitionName="fade"
        okText="Закрыть"
        okType="primary"
        onOk={[Function]}
        title="Добро пожаловать в систему."
        transitionName="zoom"
        visible={false}
        width={520}
      >
        <p>
          Спасибо что выбрали 
          нашу систему!
        </p>
      </Modal>
    </Layout>
  </Layout>
</Fragment>
`;

exports[`<Dashboard /> main page Should render component 3`] = `
<Fragment>
  <Layout
    className="layout_menu"
  >
    <MenuView
      activeTabEUID="MainModule"
      cbGoMain={[Function]}
      cbMenuHandler={[Function]}
      cbOnCollapse={[Function]}
      collapsed={false}
      items={Array []}
      key="menu"
    />
    <Layout
      key="main"
    >
      <Connect(HeaderView)
        actionTabs={
          Array [
            Object {
              "DATAKEY": "MainModule",
              "EUID": "MainModule",
              "PARENT_CODE": "MainModule",
              "VALUE": "MainModule",
            },
          ]
        }
        activeTabEUID="MainModule"
        cbMenuTabHandler={[Function]}
        dashboardStrem={
          EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
            "_maxListeners": undefined,
          }
        }
        goCabinet={[Function]}
        key="header"
        logout={[Function]}
      />
      <ContentView
        actionTabs={
          Array [
            "MainModule",
          ]
        }
        dashboardStrem={
          EventEmitter {
            "_events": Object {},
            "_eventsCount": 0,
            "_maxListeners": undefined,
          }
        }
        key="contentView"
        onErrorRequstAction={[Function]}
        onHideLoader={[Function]}
        onShowLoader={[Function]}
        path="MainModule"
        router={
          Object {
            "actionTabs": Array [
              "MainModule",
            ],
            "currentActionTab": "MainModule",
            "routeData": Object {
              "MainModule": Object {
                "name": "MainModule",
              },
            },
            "routeDataActive": null,
          }
        }
        setCurrentTab={[Function]}
        shouldUpdate={false}
        statusApp="online"
        udata={Object {}}
        updateLoader={[Function]}
      />
      <Modal
        className="guideModal"
        confirmLoading={false}
        maskTransitionName="fade"
        okText="Закрыть"
        okType="primary"
        onOk={[Function]}
        title="Добро пожаловать в систему."
        transitionName="zoom"
        visible={false}
        width={520}
      >
        <p>
          Спасибо что выбрали 
          нашу систему!
        </p>
      </Modal>
    </Layout>
  </Layout>
</Fragment>
`;
